@@ -106,8 +106,8 @@ int main(int argc, char *argv[])
                     OUT.shot_select = abs(atoi(argv[arg++])); 
                     break;
                 case 'B':  
-                  //                    for(c=0; c<4;c++) OUT.cropbox[c]  = atoi(argv[arg++]); 
-                    break;
+                  for(c=0; c<4;c++) OUT.cropbox[c]  = atoi(argv[arg++]); 
+                  break;
                 case 'R':  
                     rep = abs(atoi(argv[arg++])); 
                     if(rep<1) rep = 1;
@@ -157,11 +157,7 @@ int main(int argc, char *argv[])
             if(c==rep) // no failure
                 {
                     unsigned int crop[4];
-#if 0
                     for(int i=0;i<4;i++) crop[i] = (OUT.cropbox[i])>>shrink;
-#else
-                    memset(crop,0,sizeof(crop));
-#endif
                     if(crop[0]+crop[2]>S.iwidth) crop[2] = S.iwidth-crop[0];
                     if(crop[1]+crop[3]>S.iheight) crop[3] = S.iheight-crop[1];
 
