@@ -1,6 +1,7 @@
 2012-08-20 Alex Tutubalin <lexa@lexa.ru>
    * reverted (internal) changes to PhaseOne processing
    * subtract_black() works again
+   * cropping works again
    * Fixed minor problem in lossy DNG tone curve generation
    * Imported dcraw 1.452:
      - Changed color data for Canon 1D-X camera
